# owl

./: .env.example  .gitignore  LICENSE  README.md  aggregate_code_with_file_tree.py  aggregated_code.txt  owl.sqlite3  pyproject.toml  requirements.txt  run.py
owl/: config.py  embeds.py
owl/cogs/: dictionary_watcher.py  gpt_mentions.py  owl_commands.py  rating_watcher.py  translation_watcher.py  voice_watcher.py
owl/models/: guild_settings.py
owl/persistence/: db.py  guild_settings_store.py
owl/services/: definitions.py  gpt_utils.py  rating.py  transcription.py  translation.py
src/: embeds.py  logging_config.py
src/cogs/: dictionary_watcher.py  gpt_mentions.py  owl_commands.py  rating_watcher.py  translation_watcher.py  voice_watcher.py
src/models/: __init__.py
src/persistence/: db.py  guild_settings_store.py
src/services/: definitions.py  gpt_utils.py  pronunciation.py  rating.py  transcription.py  translation.py
