[project]
name = "owl-bot"
version = "0.1.0"
description = "🦉 A witty Discord bot: pronunciation, definitions, translation, transcription, and rating."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = "MIT"                 # SPDX string instead of table
requires-python = ">=3.11"

dependencies = [
    "discord.py>=2.4.0",
    "openai>=1.40.0",
    "gTTS>=2.5.1",
    "openai-whisper>=20231117",
    "fasttext-wheel>=0.9.2",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.9.5",
    "numpy<2.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ---- Tell setuptools to ONLY package "owl" and ignore "models/" ----
[tool.setuptools]
packages = ["owl"]

# If you prefer auto-discovery instead, use this block instead of [tool.setuptools] above:
# [tool.setuptools.packages.find]
# include = ["owl*"]
# exclude = ["models*", "tests*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
